Getting the client side code to compile
Most of the client side code was originally written in separate
segments, without actually checking that it compiled. So a bunch of the
function calls had the wrong names, or the linker freaked out because we
weren't cross compiling to C++ correctly, a bunch of stuff like that.
This commit fixes those "can't compile" issues.

Note that this commit doesn't guarantee that the code _works_ at all,
just that it now compiles properly. Still waiting on a test bed to
ensure that it actually works (either a test script or another aruduino
to test on).

There's also some functionality that isn't in here, this only includes
the core required FSM and button polling logic. LCD driver, seven
segment driver, and SD card driver all still need writing.

--- a/arduino_programs/client/Makefile
+++ b/arduino_programs/client/Makefile
@@ -1,7 +1,7 @@
 CC = avr-gcc
 CXX = avr-g++
 HARDWARE = /Users/aaronmorrison/Arduino.app/Contents/Java/hardware
-HARDWARE = /usr/share/arduino/hardware
+#HARDWARE = /usr/share/arduino/hardware
 DEFINES = -DF_CPU=16000000L -DARDUINO=10612 -DARDUINO_AVR_MEGA2560 -DARDUINO_ARCH_AVR
 MICRO = -mmcu=atmega2560
 CFLAGS = -std=gnu11 $(MICRO) $(DEFINES)
@@ -23,6 +23,7 @@ VPATH += $(HARDWARE)/arduino/cores/arduino/
 
 #our source files
 objects = client_main.o
+objects +=client_globals.o
 objects +=radio_comms.o
 objects +=shared_types.o
 objects +=client_fsm.o
