Integrate SevSeg into the rest of the arduino code
Change some functions, instead of passing around a pointer to a SevSeg
struct, just have a single global SevSeg struct.

Added the _SevSeg suffix to the functions in that library, to make them
more clear.

--- a/arduino_programs/tower/Makefile
+++ b/arduino_programs/tower/Makefile
@@ -27,6 +27,7 @@ objects +=tower_main.o
 objects +=radio_comms.o
 objects +=shared_types.o
 objects +=tower_fsm.o
+objects +=SevSeg.o
 
 #arduino source files: get compiled into core.a
 lib_objects  = wiring_pulse.o
