--- a/arduino_programs/client/Makefile
+++ b/arduino_programs/client/Makefile
@@ -27,6 +27,7 @@ objects +=client_globals.o
 objects +=radio_comms.o
 objects +=shared_types.o
 objects +=client_fsm.o
+objects +=SevSeg.o
 
 #arduino source files: get compiled into core.a
 lib_objects  = wiring_pulse.o
