Add daq polling to tower main loop
Dummy values for calibration at the moment. Need to map a 10bit ADC
value with 5V full scale into a mass, 2 pressures, and current stuff.
Calibration to be done eventually. Daq values are not logged at present.

tested with limit switches and valves, and that part seems to work
great, still need to actually hook up sensors and see how that handles.

--- a/arduino_programs/tower/Makefile
+++ b/arduino_programs/tower/Makefile
@@ -24,6 +24,7 @@ VPATH += $(HARDWARE)/arduino/cores/arduino/
 #our source files
 objects  =tower_globals.o
 objects +=tower_main.o
+objects +=tower_daq.o
 objects +=radio_comms.o
 objects +=shared_types.o
 objects +=tower_fsm.o
