Add unit test to nodeio.ioio
It's a random unit test that generates 10000 random sensor_data_t's,
pushes them all through "pack_sensor_data", pulls them through
"unpack_sensor_data", and checks that they're equal. Basic test, but it
doesn't currently pass, because the "unpack_sensor_data" function hasn't
been written. That's up next.

--- a/arduino_programs/tests/Makefile
+++ b/arduino_programs/tests/Makefile
@@ -1,14 +1,20 @@
 CC = gcc
 CXX = g++
 
+CFLAGS = -DNODE_TEST
+CXXFLAGS = -DNODE_TEST
 VPATH += ..
 
 INCLUDES = -I..
+INCLUDES+= -I.
 
 TESTS = shared_type_tests
+TESTS+= nodeio_ioio_tests
 
 OBJS  = shared_type_tests.o
 OBJS += shared_types.o
+OBJS += nodeio_ioio_tests.o
+OBJS += nodeio.ioio.o
 
 .PHONY: all
 all: $(TESTS)
@@ -16,8 +22,11 @@ all: $(TESTS)
 	  do ./$$i; \
 	done
 
-shared_type_tests: $(OBJS)
-	@$(CC) -o $@ $(OBJS)
+shared_type_tests: shared_type_tests.o shared_types.o
+	@$(CC) -o $@ $^
+
+nodeio_ioio_tests: nodeio_ioio_tests.o nodeio.ioio.o
+	@$(CC) -o $@ $^
 
 %.o: %.c
 	@$(CC) $(INCLUDES) $(CFLAGS) -c $< -o $@
