Create writeup for IREC
Still in a basic form, but there's a latex template, and we all know
that that's the most important step in order to get a document finished

Content is in a very shakey state. This is promised to be finished by
May 16th, 2018, so if today is past then and this document hasn't been
updated, it's because I'm a terrible person

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 #My mac keeps putting these files everywhere
 .DS_Store
 
+#now that we have LaTeX files, ignore all intermediates
+*.aux
+*.log
+
 #test executables shouldn't be tracked
 /arduino_programs/tests/shared_type_tests
 /arduino_programs/tests/nodeio_ioio_tests
