Create a unit test for sd logging
It currently tests rlcslog and log daq values. More tests to come.

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -10,11 +10,14 @@ INCLUDES+= -I.
 
 TESTS = shared_type_tests
 TESTS+= nodeio_ioio_tests
+TESTS+= rlcslog_tests
 
 OBJS  = shared_type_tests.o
 OBJS += shared_types.o
 OBJS += nodeio_ioio_tests.o
 OBJS += nodeio.ioio.o
+OBJS += rlcslog_tests.o
+OBJS += sd_handler.o
 
 .PHONY: all
 all: $(TESTS)
@@ -28,10 +31,13 @@ shared_type_tests: shared_type_tests.o shared_types.o
 nodeio_ioio_tests: nodeio_ioio_tests.o nodeio.ioio.o
 	@$(CC) -o $@ $^
 
-%.o: %.c
+rlcslog_tests: rlcslog_tests.o sd_handler.o
+	@$(CC) -o $@ $^
+
+%.o: %.c SD.h
 	@$(CC) $(INCLUDES) $(CFLAGS) -c $< -o $@
 
-%.o: %.cpp
+%.o: %.cpp SD.h
 	@$(CXX) $(INCLUDES) $(CXXFLAGS) -c $< -o $@
 
 .PHONY: clean
