Workarounds to avoid using symlinks
Since some of our team is on Windows (cough cough Zach), and some of our
team is on real operating systems, we can't use symlinks. So all shared
files are copied twice, and the submodule is cloned twice

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "src/serialization_lib"]
-	path = src/serialization_lib
+[submodule "src/client_arduino_ide/serialization_lib"]
+	path = src/client_arduino_ide/serialization_lib
+	url = git@github.com:waterloo-rocketry/serialization_lib.git
+[submodule "src/tower_arduino_ide/serialization_lib"]
+	path = src/tower_arduino_ide/serialization_lib
 	url = git@github.com:waterloo-rocketry/serialization_lib.git
