--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@
 #test executables shouldn't be tracked
 /arduino_programs/tests/shared_type_tests
 /arduino_programs/tests/nodeio_ioio_tests
+
+
+# MPLAB Project Folders
+build
+dist
+nbproject
