--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.kicad_pcb-bak
 *.dwl
 *.dwl2
+fp-info-cache
 
 #My mac keeps putting these files everywhere
 .DS_Store
@@ -25,3 +26,5 @@ build
 debug
 dist
 # nbproject
+src/relay_pic/nbproject/Makefile-*
+src/relay_pic/nbproject/private
