Add changes to fix Alex's comments
Modify .gitignore to untrack unwated files.

Signed-off-by: AIDAN HA <qbha@edu.uwaterloo.ca>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 *.dwl
 *.dwl2
+fp-info-cache
 
 #My mac keeps putting these files everywhere
 .DS_Store
@@ -45,3 +46,5 @@ build
 debug
 dist
 # nbproject
+src/relay_pic/nbproject/Makefile-*
+src/relay_pic/nbproject/private
