--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@
 *.dwl
 *.dwl2
 
+schematics/power_board_schematics/*.bak
+schematics/power_board_schematics/*.kicad_pcb-bak
+schematics/power_board_schematics/*.dwl
+schematics/power_board_schematics/*.dwl2
+
+
 #My mac keeps putting these files everywhere
 .DS_Store
 
