--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 *.hex
 *.elf
 
-*.bak
-*.kicad_pcb-bak
 *.dwl
 *.dwl2
 
@@ -18,3 +16,26 @@
 #test executables shouldn't be tracked
 /arduino_programs/tests/shared_type_tests
 /arduino_programs/tests/nodeio_ioio_tests
+
+# For PCBs designed using KiCad: http://www.kicad-pcb.org/
+# Format documentation: http://kicad-pcb.org/help/file-formats/
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
